# plutus-v2-contracts

./: .gitignore  Makefile  cabal.project  ecdsaSecp256k1.plutus  flake.nix  hie.yaml  package-lock.json  package.json  plutus-v2-contracts.cabal  result.plutus  schnorrSecp256k1.plutus
app/: Main.hs
js-impl/: index.js
scripts/: .gitignore  README.md  buildInitTx.sh  buildRedeemTx.sh  ecdsaSecp256k1.addr  ecdsaSecp256k1.plutus  ecdsaSecp256k1Redeemer.json  init.sh  schnorrSecp256k1.addr  schnorrSecp256k1.plutus  schnorrSecp256k1Redeemer.json
src/Plutus/V2/: EcdsaSecp256k1Validator.hs  SchnorrSecp256k1Validator.hs  SchnorrValidator.hs
