cabal-version:      3.0
name:               plutus-v2-contracts
version:            0.1.0.0
synopsis:           Test validators for Plutus V2 features
homepage:           https://github.com/mlabs-haskell/plutus-v2-contracts
bug-reports:        https://github.com/mlabs-haskell/plutus-v2-contracts
license:
license-file:
author:             MLabs
maintainer:         gergely@mlabs.city
copyright:          TODO
build-type:         Simple
tested-with:        GHC ==8.10.4
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/mlabs-haskell/plutus-v2-contracts

-- Common sections

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Werror
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fplugin=RecordDotPreprocessor

  build-depends:
    , base                     ^>=4.14
    , record-dot-preprocessor
    , record-hasfield

  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  default-language:   Haskell2010

-- Libraries


library
  import:          common-lang
  exposed-modules: Plutus.V2.SchnorrValidator
  build-depends:
    , bytestring
    , cardano-api
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , serialise

  hs-source-dirs:  src

executable mk-plutus-v2-contracts
  import:         common-lang
  main-is:        Main.hs
  build-depends:
    , bytestring
    , cardano-api
    , cardano-ledger-alonzo
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , plutus-v2-contracts
    , serialise

  hs-source-dirs: app
